introduced triangle recall feature on hover and automatic canvas resizing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class = "row">
       <div class = "col-md-3">
         <form id="selector">
-          <h1>Enter Sides!</h1>
+          <h1>Enter Side Lengths</h1>
           <div class="form-group">
             <input id = "sideA" class="form-control" name="sideA" type="number" placeholder="SideA"></input>
           </div>
@@ -39,7 +39,7 @@
     </div>
     <div class="row">
       <div id ="canvas-box">
-        <canvas id="myCanvas" width="200" height="200" style="border:1px solid"></canvas>
+        <canvas id="myCanvas" width="800" height="800"></canvas>
       </div>
     </div>
   </body>
